add be logging
